--- a/index.html
+++ b/index.html
@@ -1902,7 +1902,7 @@
             <p class="title has-text-centered">
               <span class="has-text-danger">Step 4:</span> Saggested dates:
             </p>
-            <div id="freeDatesCalendar" class="green"></div>
+            <div id="freeDatesCalendar" class="blue"></div>
             <button class="modal-button button">
               <span class="icon">
                 <i class="fa-regular fa-eye"></i>
