--- a/index.html
+++ b/index.html
@@ -139,11 +139,18 @@
 
         <div class="navbar-end">
           <div class="navbar-item">
-            <button class="button is-light is-danger">
-              <span class="icon is-small"
-                ><i class="fa-solid fa-arrow-right-from-bracket"></i></span
-              ><span>Log out</span>
-            </button>
+            <div class="buttons">
+              <button class="button">
+                <span class="icon is-small"
+                  ><i class="fa-solid fa-user"></i
+                ></span>
+              </button>
+              <button class="button is-light is-danger">
+                <span class="icon is-small"
+                  ><i class="fa-solid fa-arrow-right-from-bracket"></i></span
+                ><span>Log out</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
